--- a/pytex/templates/pytex/index.html
+++ b/pytex/templates/pytex/index.html
@@ -8,6 +8,7 @@
        <link rel="stylesheet" type="text/css" href="{% static 'pytex/style.css' %}">
     </head>
     <body>
+        {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
         <form action='' method='post'>
             {% csrf_token %}
             {{ form }}
