Fixed .css file placement in structure and href in index.html

--- a/pytex/templates/pytex/index.html
+++ b/pytex/templates/pytex/index.html
@@ -5,7 +5,7 @@
     <head>
        <meta charset='utf-8'>
        <title>Latex Generator</title>
-       <link rel="stylesheet" type="text/css" href="{% static 'pytex/style.css' %}">
+       <link rel="stylesheet" type="text/css" href="{% static 'pytex/css/style.css' %}">
     </head>
     <body>
         {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
