--- a/backend/pytex/templates/pytex/index.html
+++ b/backend/pytex/templates/pytex/index.html
@@ -8,6 +8,11 @@
        <link rel="stylesheet" type="text/css" href="{% static 'pytex/css/style.css' %}">
     </head>
     <body>
+        <header>
+            <h1>
+                UCL Latex Generator
+            </h1>
+        </header>
         {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
         <form action='' method='post'>
             {% csrf_token %}
