--- a/backend/pytex/templates/pytex/index.html
+++ b/backend/pytex/templates/pytex/index.html
@@ -5,7 +5,7 @@
     <head>
        <meta charset='utf-8'>
        <title>Latex Generator</title>
-       <link rel="stylesheet" type="text/css" href="{% static 'pytex/css/style.css' %}">
+       <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     </head>
     <body>
         <header>
